fix notification spacing

--- a/components/comment.module.css
+++ b/components/comment.module.css
@@ -1,6 +1,7 @@
 .item {
     align-items: flex-start;
     margin-bottom: 0 !important;
+    padding-bottom: 0 !important;
 }
 
 .upvote {
